--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </svg>
         </button>
       </div>
-      <!-- menu movil -->
+      <!-- menu mobile -->
       <div class="menu-container js-menu-container" id="mobile-menu">
         <button class="menu-toggle menu-toggle--absolute js-close-menu">
           <svg class="menu-closed">
