--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                   "
                 />
                 <source
-                  media="(min-width:768px)"
+                  media="(max-width:1199px)"
                   srcset="
                     ./images/tablet/image-tablet.jpg    1x,
                     ./images/tablet/image-tablet@2x.jpg 2x
