x minuscula a mayuscula en imagenes

--- a/index.html
+++ b/index.html
@@ -324,20 +324,20 @@
                   media="(min-width:1200px)"
                   srcset="
                     ./images/desktop/image.jpg    1x,
-                    ./images/desktop/image@2x.jpg 2x
+                    ./images/desktop/image@2X.jpg 2x
                   "
                 />
                 <source
                   media="(min-width:768px)"
                   srcset="
                     ./images/tablet/image-tablet.jpg    1x,
-                    ./images/tablet/image-tablet@2x.jpg 2x
+                    ./images/tablet/image-tablet@2X.jpg 2x
                   "
                 />
                 <img
                   srcset="
                     ./images/mobile/image-mobile.jpg    1x,
-                    ./images/mobile/image-mobile@2x.jpg 2x
+                    ./images/mobile/image-mobile@2X.jpg 2x
                   "
                   src="./images/mobile/image-mobile.jpg"
                   width="450"
@@ -393,20 +393,20 @@
                   media="(min-width:1200px)"
                   srcset="
                     ./images/desktop/image1.jpg    1x,
-                    ./images/desktop/image1@2x.jpg 2x
+                    ./images/desktop/image1@2X.jpg 2x
                   "
                 />
                 <source
                   media="(min-width:768px)"
                   srcset="
                     ./images/tablet/image1-tablet.jpg    1x,
-                    ./images/tablet/image1-tablet@2x.jpg 2x
+                    ./images/tablet/image1-tablet@2X.jpg 2x
                   "
                 />
                 <img
                   srcset="
                     ./images/mobile/image1-mobile.jpg    1x,
-                    ./images/mobile/image1-mobile@2x.jpg 2x
+                    ./images/mobile/image1-mobile@2X.jpg 2x
                   "
                   src="./images/mobile/image1-mobile.jpg"
                   width="450"
@@ -456,20 +456,20 @@
                   media="(min-width:1200px)"
                   srcset="
                     ./images/desktop/image2.jpg    1x,
-                    ./images/desktop/image2@2x.jpg 2x
+                    ./images/desktop/image2@2X.jpg 2x
                   "
                 />
                 <source
                   media="(min-width:768px)"
                   srcset="
                     ./images/tablet/image2-tablet.jpg    1x,
-                    ./images/tablet/image2-tablet@2x.jpg 2x
+                    ./images/tablet/image2-tablet@2X.jpg 2x
                   "
                 />
                 <img
                   srcset="
                     ./images/mobile/image2-mobile.jpg    1x,
-                    ./images/mobile/image2-mobile@2x.jpg 2x
+                    ./images/mobile/image2-mobile@2X.jpg 2x
                   "
                   src="./images/mobile/image2-mobile.jpg"
                   width="450"
@@ -519,20 +519,20 @@
                   media="(min-width:1200px)"
                   srcset="
                     ./images/desktop/image3.jpg    1x,
-                    ./images/desktop/image3@2x.jpg 2x
+                    ./images/desktop/image3@2X.jpg 2x
                   "
                 />
                 <source
                   media="(min-width:768px)"
                   srcset="
                     ./images/tablet/image3-tablet.jpg    1x,
-                    ./images/tablet/image3-tablet@2x.jpg 2x
+                    ./images/tablet/image3-tablet@2X.jpg 2x
                   "
                 />
                 <img
                   srcset="
                     ./images/mobile/image3-mobile.jpg    1x,
-                    ./images/mobile/image3-mobile@2x.jpg 2x
+                    ./images/mobile/image3-mobile@2X.jpg 2x
                   "
                   src="./images/mobile/image3-mobile.jpg"
                   width="450"
