x en imagenes portafolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,20 +156,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/whitepc.jpg    1x,
-                        ./images/desktop/whitepc@2x.jpg 2x
+                        ./images/desktop/whitepc@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/whitepc-tablet.jpg    1x,
-                        ./images/tablet/whitepc-tablet@2x.jpg 2x
+                        ./images/tablet/whitepc-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/whitepc-mobile.jpg    1x,
-                        ./images/mobile/whitepc-mobile@2x.jpg 2x
+                        ./images/mobile/whitepc-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/whitepc-mobile.jpg"
                       width="450"
@@ -198,20 +198,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/basket.jpg    1x,
-                        ./images/desktop/basket@2x.jpg 2x
+                        ./images/desktop/basket@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/basket-tablet.jpg    1x,
-                        ./images/tablet/basket-tablet@2x.jpg 2x
+                        ./images/tablet/basket-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/basket-mobile.jpg    1x,
-                        ./images/mobile/basket-mobile@2x.jpg 2x
+                        ./images/mobile/basket-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/basket-mobile.jpg"
                       width="450"
@@ -242,20 +242,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/seafood.jpg    1x,
-                        ./images/desktop/seafood@2x.jpg 2x
+                        ./images/desktop/seafood@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/seafood-tablet.jpg    1x,
-                        ./images/tablet/seafood-tablet@2x.jpg 2x
+                        ./images/tablet/seafood-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/seafood-mobile.jpg    1x,
-                        ./images/mobile/seafood-mobile@2x.jpg 2x
+                        ./images/mobile/seafood-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/seafood-mobile.jpg"
                       width="450"
@@ -284,20 +284,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/earphones.jpg    1x,
-                        ./images/desktop/earphones@2x.jpg 2x
+                        ./images/desktop/earphones@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/earphones-tablet.jpg    1x,
-                        ./images/tablet/earphones-tablet@2x.jpg 2x
+                        ./images/tablet/earphones-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/earphones-mobile.jpg    1x,
-                        ./images/mobile/earphones-mobile@2x.jpg 2x
+                        ./images/mobile/earphones-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/earphones-mobile.jpg"
                       width="450"
@@ -326,20 +326,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/boxes.jpg    1x,
-                        ./images/desktop/boxes@2x.jpg 2x
+                        ./images/desktop/boxes@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/boxes-tablet.jpg    1x,
-                        ./images/tablet/boxes-tablet@2x.jpg 2x
+                        ./images/tablet/boxes-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/boxes-mobile.jpg    1x,
-                        ./images/mobile/boxes-mobile@2x.jpg 2x
+                        ./images/mobile/boxes-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/boxes-mobile.jpg"
                       width="450"
@@ -368,20 +368,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/blackpc.jpg    1x,
-                        ./images/desktop/blackpc@2x.jpg 2x
+                        ./images/desktop/blackpc@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/blackpc-tablet.jpg    1x,
-                        ./images/tablet/blackpc-tablet@2x.jpg 2x
+                        ./images/tablet/blackpc-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/blackpc-mobile.jpg    1x,
-                        ./images/mobile/blackpc-mobile@2x.jpg 2x
+                        ./images/mobile/blackpc-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/blackpc-mobile.jpg"
                       width="450"
@@ -412,20 +412,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/book.jpg    1x,
-                        ./images/desktop/book@2x.jpg 2x
+                        ./images/desktop/book@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/book-tablet.jpg    1x,
-                        ./images/tablet/book-tablet@2x.jpg 2x
+                        ./images/tablet/book-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/book-mobile.jpg    1x,
-                        ./images/mobile/book-mobile@2x.jpg 2x
+                        ./images/mobile/book-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/book-mobile.jpg"
                       width="450"
@@ -454,20 +454,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/tag.jpg    1x,
-                        ./images/desktop/tag@2x.jpg 2x
+                        ./images/desktop/tag@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/tag-tablet.jpg    1x,
-                        ./images/tablet/tag-tablet@2x.jpg 2x
+                        ./images/tablet/tag-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/tag-mobile.jpg    1x,
-                        ./images/mobile/tag-mobile@2x.jpg 2x
+                        ./images/mobile/tag-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/tag-mobile.jpg"
                       width="450"
@@ -496,20 +496,20 @@
                       media="(min-width:1200px)"
                       srcset="
                         ./images/desktop/pc.jpg    1x,
-                        ./images/desktop/pc@2x.jpg 2x
+                        ./images/desktop/pc@2X.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768px)"
                       srcset="
                         ./images/tablet/pc-tablet.jpg    1x,
-                        ./images/tablet/pc-tablet@2x.jpg 2x
+                        ./images/tablet/pc-tablet@2X.jpg 2x
                       "
                     />
                     <img
                       srcset="
                         ./images/mobile/pc-mobile.jpg    1x,
-                        ./images/mobile/pc-mobile@2x.jpg 2x
+                        ./images/mobile/pc-mobile@2X.jpg 2x
                       "
                       src="./images/mobile/pc-mobile.jpg"
                       width="450"
